# gRPC_Cpp_CCTVStreaming

./: .gitignore  CMakeLists.txt  README.md  opencv_cmake.sh
app/client/: CMakeLists.txt  client_main.cc
app/server/: CMakeLists.txt  server_main.cc
include/client/: ClientVideoStreamer.h  shape.h
include/server/: ServerVideoStreamer.h  WebSockVariable.h
lib/: CMakeLists.txt
lib/client/: ClientVideoStreamer.cc  shape.cc
lib/server/: ServerVideoStreamer.cc  WebSockVariable.cc  browser.html
protos/: streaming.proto
tests/: CMakeLists.txt
